 * Configuration files ownership validation on start-up and in `pfcmd checkup`
 * Inline firewall changes: prevent registered users from reaching the captive portal
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)
 * Minor usability improvements
 * Reduced some false warnings in the logs on node de-registration (#1315)

Bug Fixes
 * Firewall doesn't allow broadcast packets on internal interfaces (#1316)
 * Pre-registered guest unregdate not set (#1301)
 * Allow incoming DNS on management interface to track users IPs in production VLANs
 * Guest access by SMS confirmation now properly record user's firstname and lastname (#1308)
 * Signup page now retain Phone provider value if there was a mistake in the form (#1309)
 * Cisco access point (AP) configuration mistake in documentation
 * Dashboard not printing the SQL stats when MySQL is not local (#1289)
 * Doubled allow subnets in captive-portal-common (#1242)
 * Unreliable encoding behavior messes up with translations (#1287)
 * Nodes are not unregistered on unregdate unless an expire mode is activated (#1298)
 * Add trigger or cascade to delete node_useragent when deleting a node (#1285)
 * Removed an error when validating multiple guest pre-registration
 * No admin username output when printing guest access codes
 * Guest access code are now sorted when using batch creation
 * Path problem in Proxy Bypass addon
 * Reduced documentation.conf startup annoyance when using custom authentication modules
 * Pinned Net-Appliance-Session version requirement in RPM Spec (#1312)
 * Some reports graphics were not properly dispalyed (#1234)

Translations
 * Updated French (fr) translation

--------------------------------------------------------------------------------
Version 3.0.1 released on 2011-09-23

Enhancements
 * Process IDs are now logged in the logs for pfcmd and pfcmd_vlan
 * We now strip all non-digits in telephone numbers during SMS activation
 * Improved validation of violation triggers
