@@ -13,8 +13,15 @@ o Upgrading from a version prior to 3.0.2:
     mysql -u root -p pf -v < db/upgrade-3.0.1-3.0.2.sql
 
     - pf.conf configuration changes
-    guests.self_allow_localdomain has been renamed 
-    guests_self_registration.allow_localdomain
+     - guests.self_allow_localdomain has been renamed 
+       guests_self_registration.allow_localdomain
+     - advanced.adjustswitchportvlanscript has been dropped
+     - advanced.reevaluate_access_reasons's default value changed
+
+    - Changes to Inline API
+    Added a new method to pf::inline. Users with customized pf::inline::custom
+    will need to bump the API level to '1.01' after your changes are made (if
+    required) to stop PacketFence from complaining about correct API level.
 
     - Changes to Guest API
      - generate_activation_login_page is now generate_custom_login_page
@@ -47,6 +54,10 @@ o Upgrading from a version prior to 3.0.2:
     Review the updated firewall rules (in .rpmnew) if you made changes and
     make sure to integrate changes if you need them. New rules include:
      - Allow incoming DNS on management interface (track production VLANs IPs)
+
+    - pfcmd_vlan interface changes
+    reevaluateVlan is now called reevaluateAccess and will perform appropriate
+    changes for a firewall change too (inline enforcement).
 
 o Upgrading from a version prior to 3.0.1:
 
