@@ -774,15 +774,8 @@ EOT
 
 [advanced.reevaluate_access_reasons]
 type=multi
-options=node_modify|manage_register|manage_deregister|manage_vclose|manage_vopen|violation_modify|violation_add|violation_delete|redir.cgi
+options=node_modify|manage_register|manage_deregister|manage_vclose|manage_vopen|violation_modify|violation_add|violation_delete|redir.cgi|pfcmd_vlan
 description=<<EOT
 After which calls to pfcmd do we have to re-evaluate the state of a node and 
 re-assign VLAN or change iptables rules
 EOT
-
-[advanced.adjustswitchportvlanscript]
-type=text
-description=<<EOT
-Which script do we have to execute to adjust the switchport VLAN
-EOT
-
