@@ -591,9 +591,4 @@ network_detection_ip = 67.205.85.245
 # advanced.reevaluate_access_reasons
 #
 # After which calls to pfcmd do we have to re-evaluate the state of a node and re-assign VLAN or change iptables rules
-reevaluate_access_reasons=node_modify,manage_register,manage_deregister,manage_vclose,manage_vopen,violation_modify,violation_add,violation_delete,redir.cgi
-#
-# advanced.adjustswitchportvlanscript
-#
-# Which script do we have to execute to adjust the switchport VLAN
-adjustswitchportvlanscript=pfcmd_vlan
+reevaluate_access_reasons=node_modify,manage_register,manage_deregister,manage_vclose,manage_vopen,violation_modify,violation_add,violation_delete,redir.cgi,pfcmd_vlan
