@@ -104,7 +104,7 @@ sub doWeActOnThisTrap {
 
     # TODO we should rethink the position of this code, it's in the wrong test but at the good spot in the flow
     my $weActOnThisTrap = 0;
-    if ( $trapType eq 'desAssociate' ) {
+    if ( $trapType eq 'desAssociate' || $trapType eq 'firewallRequest' ) {
         return 1;
     }
     if ( $trapType eq 'dot11Deauthentication' ) {
